Restrict CORS origins for API routes